fixed toggle not showing up when in mobile view.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-  <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-default navbar-washos" style="background-color: #213951">
+  <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light navbar-washos" style="background-color: #213951">
     <a class="navbar-brand" href="/"><img alt="Washos Logo" data-rjs="2" src="https://res-5.cloudinary.com/washos/image/upload/v1/web_assets/header-logo@2x.png" data-rjs-processed="true" width="164" height="19"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
