--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -32,9 +32,9 @@
           <%= select_tag('appointment[package]', options_from_collection_for_select(@packages, 'id', lambda { |package| "#{package.name} - #{formatted_value(package.value)}" }), id: 'Select_your_package', class: 'form-control') %>
         </div>
         <div class="row">
-          <div class="col-auto">
+          <div class="col-md-12">
             <p>
-              <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample" id="add_options">
                 + Add options
               </a>
             </p>
@@ -45,7 +45,7 @@
             <div class="form-check">
               <label class="form-check-label">
                 <%= check_box_tag("appointment[options][#{index}]", option.id, false, class: 'form-check-input') %>
-                <%= option.name %>
+                <%= "#{option.name} - #{formatted_value(option.value)}" %>
               </label>
             </div>
           <% end %>
