split appointment and service forms up.

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,60 +1,1 @@
-<%= form_with scope: :appointment, url: appointments_path, local: true do |form| %>
-
-  <% if @appointment.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@appointment.errors.count, "error") %> prohibited
-        this appointment from being saved:
-      </h2>
-      <ul>
-        <% @appointment.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="offset-md-3 col-md-6 regular-box">
-    <div class="title-box"><h1 class="title text-center">New Appointment</h1></div>
-    <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-10 col-xs-offset-1">
-        <div class="form-group">
-          <%= form.label :customer_name %>
-          <%= form.text_field :customer_name, class: 'form-control' %>
-          <small id="emailHelp" class="form-text text-muted">e.g., John Doe</small>
-        </div>
-        <div class="form-group">
-          <%= form.label :appointment_time %>
-          <%= form.text_field :appointment_time, class: 'form-control', id: 'app_date_time' %>
-        </div>
-        <div class="form-group">
-          <%= label_tag('Select your package') %>
-          <%= select_tag('appointment[package]', options_from_collection_for_select(@packages, 'id', lambda { |package| "#{package.name} - #{formatted_value(package.value)}" }), id: 'Select_your_package', class: 'form-control') %>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p>
-              <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample" id="add_options">
-                + Add options
-              </a>
-            </p>
-          </div>
-        </div>
-        <div class="collapse" id="collapseExample">
-          <% @options.each_with_index do |option, index| %>
-            <div class="form-check">
-              <label class="form-check-label">
-                <%= check_box_tag("appointment[options][#{index}]", option.id, false, class: 'form-check-input') %>
-                <%= "#{option.name} - #{formatted_value(option.value)}" %>
-              </label>
-            </div>
-          <% end %>
-        </div>
-
-        <p>
-          <%= form.submit 'Book Appointment', class: 'btn btn-outline-primary btn-block' %>
-        </p>
-      </div>
-    </div>
-  </div>
-<% end %>
+<%= render 'form' %>
