--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with scope: :appointment, url: appointments_path, local: true do |form| %>
+<%= form_for(@appointment) do |f| %>
 
   <% if @appointment.errors.any? %>
     <div id="error_explanation">
@@ -19,18 +19,33 @@
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-10 col-xs-offset-1">
         <div class="form-group">
-          <%= form.label :customer_name %>
-          <%= form.text_field :customer_name, class: 'form-control' %>
+          <%= f.label :customer_name %>
+          <%= f.text_field :customer_name, class: 'form-control' %>
           <small id="emailHelp" class="form-text text-muted">e.g., John Doe</small>
         </div>
-        <div class="form-group">
-          <%= form.label :appointment_time %>
-          <%= form.text_field :appointment_time, class: 'form-control', id: 'app_date_time' %>
+        <div class="fields">
+          <div class="form-group">
+            <%= f.label :appointment_time %>
+            <%= f.text_field :appointment_time, class: 'form-control', id: 'app_date_time' %>
+          </div>
+          <%= f.fields_for :services do |ff| %>
+            <%= render 'service', f: ff %>
+          <% end %>
         </div>
-          <%= render 'service_fields' %>
-        <p>
-          <%= form.submit 'Book Appointment', class: 'btn btn-outline-primary btn-block' %>
-        </p>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <%= link_to_add_row('Add Service', f, :services, class: 'btn btn-primary btn-sm btn-block') %>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <%= f.submit 'Book Appointment', class: 'btn btn-outline-primary btn-block' %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
