--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -24,28 +24,36 @@
         </div>
         <hr/>
         <div class="row">
-          <div class="col-md-6">
-            <span class="font-weight-normal">Package -</span>
-            <span class="font-weight-light"> <%= "#{@appointment.service.package.name}" %></span>
-          </div>
-          <div class="col-md-6 text-right font-weight-normal">
-            <%= "#{formatted_value(@appointment.service.package.value)}" %>
+          <div class="col-md-12 text-center">
+            <%= render_service_title(@appointment) %>
           </div>
         </div>
         <hr/>
-        <% if @appointment.service.options.present? %>
-          <% @appointment.service.options.each do |option| %>
-            <div class="row">
-              <div class="col-md-6">
-                <span class="font-weight-normal">Option - </span>
-                <span class="font-weight-light"><%= "#{option.name}" %></span>
-              </div>
-              <div class="col-md-6 text-right font-weight-normal">
-                <%= "#{formatted_value(option.value)}" %>
-              </div>
+        <% @appointment.services.each do |service| %>
+          <div class="row">
+            <div class="col-md-6">
+              <span class="font-weight-normal">Package -</span>
+              <span class="font-weight-light"> <%= "#{service.package.name}" %></span>
             </div>
-          <% end %>
+            <div class="col-md-6 text-right font-weight-normal">
+              <%= "#{formatted_value(service.package.value)}" %>
+            </div>
+          </div>
           <hr/>
+          <% if service.options.present? %>
+            <% service.options.each do |option| %>
+              <div class="row">
+                <div class="col-md-6">
+                  <span class="font-weight-normal">Option - </span>
+                  <span class="font-weight-light"><%= "#{option.name}" %></span>
+                </div>
+                <div class="col-md-6 text-right font-weight-normal">
+                  <%= "#{formatted_value(option.value)}" %>
+                </div>
+              </div>
+            <% end %>
+            <hr/>
+          <% end %>
         <% end %>
         <div class="row font-weight-bold">
           <div class="col-md-6 text-left">
