--- a/app/views/appointments/_service.html.erb
+++ b/app/views/appointments/_service.html.erb
@@ -8,13 +8,13 @@
   <div class="row">
     <div class="col-md-12">
       <p>
-        <a data-toggle="collapse" href="#<%="#{f.object_id}collapse_options" %>" aria-expanded="false" aria-controls="<%="#{f.object_id}collapse_options" %>" id="add_options">
+        <a data-toggle="collapse" href="#<%="#{return_id(f)}collapse_options" %>" aria-expanded="false" aria-controls="<%="#{return_id(f)}collapse_options" %>" id="add_options">
           + Add options
         </a>
       </p>
     </div>
   </div>
-  <div class="collapse" id="<%="#{f.object_id}collapse_options" %>">
+  <div class="collapse" id="<%="#{return_id(f)}collapse_options" %>">
     <% @options.each_with_index do |option, index| %>
       <div class="form-check">
         <label class="form-check-label">
