--- a/app/views/appointments/_service.html.erb
+++ b/app/views/appointments/_service.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="collapse" id="<%="#{return_id(f)}collapse_options" %>">
-    <% @options.each_with_index do |option, index| %>
+    <% @options.each do |option| %>
       <div class="form-check">
         <label class="form-check-label">
           <%= check_box_tag("#{f.object_name}[option_ids][]", option.id, false, class: 'form-check-input') %>
